--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -304,4 +304,62 @@ width : 40px;
 height : 40px;
 }
 
+.product_img{
+            width : 300px;
+            height: 150px;
+            position: relative;
+        }
+        .upload-box {
+          width: 100%;
+          height : 150px;
+          margin: 10px auto;
+          border: 5px dashed lightgray;
+          padding: 10px;
+          position: relative;
+
+        }
+        .upload-box::before{
+            content : "이미지를 드래그하세요";
+            display:block;
+            position:absolute;
+            left:0px;
+            top:10px;
+            width : 100%;
+            text-align:center;
+            color:lightgray;
+            margin-top:10px;
+        }
+
+        .plus {
+          height:100%;
+          display:flex;
+          justify-content:center;
+          align-items: center;
+
+          font-size: 3em;
+          color: lightgray;
+          position:relative;
+          top:-5%;
+        }
+
+        #preview {
+            width: 300px;
+            height : 100px;
+            margin: 10px auto;
+            border : 1px dashed lightgray;
+
+            padding: 10px;
+            position: relative;
+            left:0px;
+            top:0px;
+
+            display: flex;
+            justify-content: center;
+            align-items : center;
+            flex-wrap: wrap;
+            overflow: auto;
+
+
+        }
+
 
