--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -286,7 +286,6 @@
           display:flex;
           justify-content:space-evenly;
           align-items:center;
-          margin-bottom:25px;
       }
 
       .reply--block>.reply-header>*{
@@ -303,7 +302,7 @@
 
       .reply--block>.reply-body{
 
-           height : 410px;
+           height : 480px;
            overflow : auto;
 
       }
@@ -369,7 +368,7 @@
       }
 
       .reply_btn {
-          font-size: 14px; /* 원하는 크기로 조정 */
+          font-size: 10px; /* 원하는 크기로 조정 */
           padding: 6px 7px; /* 원하는 여백 조정 */
       }
 
@@ -398,7 +397,11 @@
           </div>
 
           <div>
-            <button class="btn btn-primary reply_btn">댓글</button>
+            <button class="btn btn-primary reply_btn" style="background-color : gray;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
+                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
