--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -29,14 +29,12 @@
 
         main>section{
             margin-top : 50px;
-            margin-left : 16%;
-            width : 600px;
             margin-bottom : 50px;
         }
 
         main>section>.profile{
             height : 200px;
-            width : 600px;
+            width : 1000px;
             display: flex;
             border-bottom : 1px solid rgb(185, 185, 185);
         }
@@ -46,7 +44,7 @@
             width : 150px;
             border : 1px solid gray;
             border-radius: 50%;
-            margin-left : 40px;
+            margin-left : 100px;
         }
 
         main>section>.profile>.menu{
@@ -90,14 +88,17 @@
         }
 
         .no{
-            line-height: 0px;
-            text-align: center;
+            font-weight: 600;
         }
 
         .dropdown-toggle{
             border-style: none;
             background-color: white;
             color: gray;
+            position : relative;
+            top : 25px;
+            right : 10px;
+            z-index : 1;
         }
 
         .dropdown-toggle:hover{
@@ -109,14 +110,13 @@
             left : 50px;
         }
 
-        main>section>.board .board-item>a>#board_img{
-            border : 1px solid blue;
+        main>section>.s_board .board-item>a>#board_img{
 
         }
 
-        main>section>.board .board-item>a>#board_img>.img{
-            height : 150px;
-            width : 150px;
+        main>section>.s_board .board-item>a>#board_img>.img{
+            height : 300px;
+            width : 300px;
             background-color: rgb(0, 0, 0);
         }
 
@@ -320,38 +320,21 @@
                 <div class="follow-box">
                     <a class="follower">
                         팔로워
-                        <div class="no">100</div>
+                        <span class="no">100</span>
                     </a>
                     <a class="following">
                         팔로잉
-                        <div class="no">100</div>
+                        <span class="no">100</span>
                     </a>
                 </div>
             </div>
-
-            <!-- <div class="profile-menu">
-                <button class="profileupdate-btn" id="profileBtn">@@@@</button>
-            </div> -->
         </div>
 
 
-        <!-- 모달 창 -->
-        <!--        <div id="profileModal" class="modal" >-->
-        <!--            <div class="modal-content">-->
-        <!--                <span class="close">&times;</span>-->
-        <!--                <h2>프로필 사진 변경</h2>-->
-        <!--                &lt;!&ndash; 업로드 폼 추가 &ndash;&gt;-->
-        <!--                <form id="profileUploadForm" action="/uploadProfile" method="post" enctype="multipart/form-data">-->
-        <!--                    &lt;!&ndash; 프로필 사진을 업로드하는 파일 입력 필드를 추가 &ndash;&gt;-->
-        <!--                    <input type="file" name="profileImage" accept="image/*">-->
-        <!--                    <input type="submit" value="업로드">-->
-        <!--                </form>-->
-        <!--            </div>-->
-        <!--        </div>-->
 
         <!-- --------------------------------------------------------------------------------------------------------------------------- -->
 
-        <div class="board" style="width : 600px; display : flex; justify-content: space-evenly; flex-wrap : wrap; margin-left : 0px;">
+        <div class="s_board" style="width : 1000px; display : flex; justify-content: left; flex-wrap : wrap; margin-left : 0px;">
 
             <th:block th:each="board : ${myBoards}">
                 <div class="board-item">
@@ -375,7 +358,7 @@
                         <div id = board_img>
                             <!-- 이미지 썸네일을 표시하는 이미지 태그 -->
                             <div class="img">
-                                <img th:src="@{${board.dirpath} + '/' + ${#strings.replace(#strings.replace(board.filename, '[', ''), ']', '')}}" width="150" height="150"/>
+                                <img th:src="@{${board.dirpath} + '/' + ${#strings.replace(#strings.replace(board.filename, '[', ''), ']', '')}}" width="300" height="300"/>
                             </div>
                         </div>
                     </a>
