--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -81,7 +81,7 @@
 
                 <a href="/mypage">
                     <div class="mypage">
-                        <img th:src="${dto.profile}" style="width:22px;height:22px;border-radius:50%;" />프로필
+                        <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:22px;height:22px;border-radius:50%;" />프로필
                     </div>
                 </a>
             </div>
@@ -181,9 +181,10 @@
 
                     <div>
                         <div class="form-group" style="height : 38px;">
-                            <img th:src="${dto.profile}" style="width:22px;height:22px;border-radius:50%;" />
+                            <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:22px;height:22px;border-radius:50%;" />
                             <label for="nickname"></label>
-                            <input type="text" id="nickname" name="nickname" th:value="${dto.nickname}" style="border : 1px solid white;"readonly/><br/>
+                            <input type="text" id="nickname" name="nickname" th:value="${#authentication.getPrincipal().getUser().getNickname()}" style="border : 1px solid white;"readonly/><br/>
+                            <input type="text" id="email" name="email" th:value="${#authentication.getPrincipal().getUser().getEmail()}" readonly/>
 
                         </div>
 
@@ -220,7 +221,7 @@
 
                     <div class="idbox">
                         <div>
-                            <img th:src="${dto.profile}" style="width:30px;height:30px;border-radius:50%;" />
+                            <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:30px;height:30px;border-radius:50%;" />
                             <div id = board_id th:text="${board.nickname}">id</div>|
                             <div class="date" th:text="${board.date}">date</div>
                         </div>
