--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -180,7 +180,7 @@
 
                 <a href="/mypage">
                     <div class="mypage" style="font-size : 1.2rem;">
-                        <img th:src="${userDto.profile}" style="width:22px;height:22px;border-radius:50%;" />프로필
+                        <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:22px;height:22px;border-radius:50%;" />프로필
                     </div>
                 </a>
             </div>
