--- a/src/main/resources/templates/search-nickname.html
+++ b/src/main/resources/templates/search-nickname.html
@@ -248,7 +248,7 @@
 
       <div class="user">
         <div class="profileimg" style="display:flex;justify-content:center; align-items : center;">
-          <img th:src="${dto.profile}" style="width:100px;height:100px;border-radius:50%;" />
+          <img th:src="${user.profile}" style="width:100px;height:100px;border-radius:50%;" />
         </div>
         <div class="name">
           <div class = "nickname" th:text="${user.nickname}"> nickname</div>
