--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -215,7 +215,7 @@
     <div class="BandF">
         <div class="board">
 
-            <th:block th:each="board : ${board}">
+            <div th:each="board,i: ${list}">
                 <div class="board-item">
 
                     <div class="idbox">
@@ -233,7 +233,7 @@
                     <a th:href="'/read/' + ${board.number}">
                         <div id = board_img>
                             <div class="img">
-                                <img th:src="@{${board.dirpath} + '/' + ${#strings.replace(#strings.replace(board.filename, '[', ''), ']', '')}}" width="450" height="100%"/>
+                                <img th:src="@{'C:/hamohamo/'+${board.email}+'/'+${board.number}+'/'+${board.files.get(0)}}" width="450" height="100%"/>
                             </div>
                             <div id=board_contents class="contents" th:text="${board.contents}">contents</div>
                         </div>
@@ -250,7 +250,7 @@
                     </div>
 
                 </div>
-            </th:block>
+            </div>
 
 
         </div>
